Added config json logic for Windows path